[package]
name = "tari_ootle_app_utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_crypto = { workspace = true, features = ["serde"] }
tari_ootle_common_types = { workspace = true }
tari_engine = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_epoch_oracles = { workspace = true, optional = true }
tari_engine_types = { workspace = true }
tari_template_lib = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_bor = { workspace = true, default-features = true }
tari_mmr = { workspace = true }
tari_networking = { workspace = true, optional = true }
tari_transaction_components = { workspace = true }
tari_hashing = { workspace = true }
tari_ootle_p2p = { workspace = true, optional = true }
ootle_serde = { workspace = true }
ootle_byte_type = { workspace = true, features = ["crypto"] }

anyhow = { workspace = true }
blake2 = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
libp2p-identity = { workspace = true, optional = true }
log = { workspace = true, features = ["std"] }
multiaddr = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true, features = ["default", "derive", "rc"] }
serde_json5 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["default", "macros", "time", "sync", "rt-multi-thread", "fs", "net"] }
url = { workspace = true, features = ["serde"] }
toml = { workspace = true }
config = { workspace = true }

[features]
p2p = ["tari_networking", "tari_ootle_p2p", "libp2p-identity", "multiaddr"]
epoch_oracle = ["tari_epoch_oracles"]
