[package]
name = "tari_validator_node"
description = "The Tari validator node implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["metrics", "web_ui"]
metrics = ["prometheus-client", "tari_networking/metrics"]
# Note: must be compiled with RUSTFLAGS='--cfg rust_unstable' to use
tokio_debug = ["console-subscriber"]
web_ui = []

[dependencies]
minotari_app_utilities = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_transaction_components = { workspace = true }
tari_crypto = { workspace = true }
tari_epoch_oracles = { workspace = true, features = ["base_layer"] }
tari_validator_node_rpc = { workspace = true }
tari_ootle_app_utilities = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_ootle_p2p = { workspace = true }
tari_engine = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_ootle_storage_sqlite = { workspace = true }
tari_state_store_rocksdb = { workspace = true }
tari_engine_types = { workspace = true }
tari_shutdown = { workspace = true }
tari_template_lib = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_base_node_client = { workspace = true }
tari_epoch_manager = { workspace = true, features = ["service"] }
tari_rpc_state_sync = { workspace = true }
tari_bor = { workspace = true, default-features = true }
tari_consensus = { workspace = true }
tari_consensus_types = { workspace = true }
tari_networking = { workspace = true }
tari_rpc_framework = { workspace = true }
tari_template_builtin = { workspace = true, features = ["templates"] }
tari_swarm = { workspace = true }
tari_state_tree = { workspace = true }
ootle_byte_type = { workspace = true, features = ["crypto"] }

sqlite_message_logger = { workspace = true }

libp2p = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-jrpc = { workspace = true, features = ["anyhow_error"] }
clap = { workspace = true, features = ["env"] }
config = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
time = { workspace = true, features = ["formatting"] }
lazy_static = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
indexmap = { workspace = true }
serde_json5 = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }
log = { workspace = true, features = ["std"] }
log4rs = { workspace = true, features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
mime_guess = { workspace = true }
prometheus-client = { workspace = true, optional = true }
rand = { workspace = true }
url = { workspace = true }
mini-moka = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
std-semaphore = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["default", "macros", "time", "sync", "rt-multi-thread", "fs", "signal"] }
tower-http = { workspace = true, features = ["default", "cors"] }

console-subscriber = { version = "0.4.1", optional = true }

[build-dependencies]
tari_common = { workspace = true, features = ["build"] }

[package.metadata.cargo-machete]
ignored = [
    # We want to bundle this lib
    "libsqlite3-sys",
    # Want to enable some log4rs features
    "log4rs",
]
