[package]
name = "tari_indexer_client"
description = "Tari indexer client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_transaction = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_template_abi = { workspace = true }
tari_template_lib_types = { workspace = true }
tari_consensus_types = { workspace = true }

anyhow = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
multiaddr = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

[features]
default = ["client"]
ts = ["ts-rs", "tari_ootle_common_types/ts", "tari_engine_types/ts", "tari_template_abi/ts", "tari_template_lib_types/ts", "tari_consensus_types/ts", "tari_transaction/ts"]
client = ["dep:reqwest", "dep:anyhow", "dep:thiserror"]
