[package]
name = "tari_indexer_client"
description = "Tari indexer client library"
version = "0.31.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_ootle_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_ootle_template_metadata = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_template_abi = { workspace = true }
tari_template_lib_types = { workspace = true }
tari_consensus_types = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true, optional = true }
bounded-vec = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"], optional = true }
serde = { workspace = true, default-features = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }
prost = { workspace = true }
serde_urlencoded = { version = "0.7.1", optional = true }
futures = { workspace = true }
utoipa = { workspace = true, optional = true, features = ["time"] }
time = { workspace = true, features = ["serde", "serde-human-readable"] }
memchr = "2.7.6"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["client"]
ts = ["ts-rs", "tari_template_lib_types/ts", "tari_engine_types/ts", "tari_ootle_common_types/ts"]
client = ["dep:reqwest", "dep:thiserror", "dep:serde_urlencoded", "dep:bytes"]
utoipa = ["dep:utoipa"]
