[package]
name = "tari_validator_node_client"
description = "Tari validator node client library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_base_node_client = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_ootle_p2p = { workspace = true }
tari_engine_types = { workspace = true }
tari_common_types = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_sidechain = { workspace = true }
tari_template_lib_types = { workspace = true }
tari_consensus_types = { workspace = true }
tari_template_abi = { workspace = true }

reqwest = { workspace = true, features = ["json"] }
indexmap = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true, default-features = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true, optional = true }

[features]
ts = ["ts-rs", "tari_ootle_p2p/ts", "tari_ootle_transaction/ts", "tari_ootle_storage/ts", "tari_template_lib_types/ts", "tari_consensus_types/ts", "tari_template_abi/ts"]
