[package]
name = "tari_ootle_common_types"
description = "Common types for Tari Ootle"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_bor = { workspace = true, default-features = true, features = ["std", "indexmap"] }
minicbor = { workspace = true, default-features = false, features = ["alloc", "derive"] }
tari_template_lib_types = { workspace = true, features = ["serde"] }
tari_crypto = { workspace = true, features = ["borsh"] }
tari_engine_types = { workspace = true }
tari_hashing = { workspace = true }
ootle_serde = { workspace = true }
ootle_byte_type = { workspace = true, features = ["crypto"] }
ootle-network = { workspace = true, features = ["serde"] }
tari_ootle_template_metadata = { workspace = true }

borsh = { workspace = true }
blake2 = { workspace = true }
bounded-vec = { workspace = true, features = ["serde"] }
digest = { workspace = true }
ethnum = { workspace = true }
newtype-ops = { workspace = true }
rand = { workspace = true }
indexmap = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, default-features = true }
ts-rs = { workspace = true, optional = true }
thiserror = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types"] # false positive, used in OUT_DIR structs

[features]
ts = ["ts-rs", "tari_bor/ts", "tari_template_lib_types/ts", "tari_engine_types/ts", "ootle-network/ts"]
