[package]
name = "tari_engine"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_bor = { workspace = true, default-features = true, features = ["std"] }
tari_common_types = { workspace = true }
tari_crypto = { workspace = true, features = ["borsh"] }
tari_ootle_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_abi = { workspace = true, features = ["std"] }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_utilities = { workspace = true }
tari_transaction = { workspace = true }

blake2 = { workspace = true }
cargo_toml = { workspace = true }
log = { workspace = true, features = ["std"] }
rand = { workspace = true }
indexmap = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
wasmer = { workspace = true, features = ["cranelift"] }
wasmer-middlewares = { workspace = true }

[dev-dependencies]
tari_template_test_tooling = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_transaction = { workspace = true }
