[package]
name = "tari_engine"
description = "Tari template runtime engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_bor = { workspace = true, default-features = true, features = ["std"] }
tari_crypto = { workspace = true, features = ["serde", "borsh"] }
tari_ootle_common_types = { workspace = true }
tari_ootle_template_metadata = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_abi = { workspace = true, features = ["std", "func-hasher"] }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_utilities = { workspace = true }
tari_ootle_transaction = { workspace = true }
ootle_byte_type = { workspace = true }

blake2 = { workspace = true }
log = { workspace = true, features = ["std"] }
rand = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, default-features = true }
thiserror = { workspace = true }
wasmer = { workspace = true, features = ["cranelift"] }
wasmer-middlewares = { workspace = true }
bytes = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

[features]
default = []
# Enables the on-disk wasmer module cache (`tari_engine::wasm::cache`). Pulls
# in `tari_template_builtin` to bypass caching for builtin addresses, plus the
# filesystem I/O surface (memmap + bytes). Disable if embedding the engine in
# an environment where a local data directory isn't available or isn't
# desirable.
wasm-cache = ["dep:bytes", "dep:memmap2"]

[dev-dependencies]
tari_template_test_tooling = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_ootle_transaction = { workspace = true }
tari_template_builtin = { workspace = true, features = ["templates", "state"] }

criterion = { version = "0.8.1", features = ["html_reports"] }
minicbor = { workspace = true, default-features = false, features = ["alloc", "derive"] }
tempfile = { workspace = true }


[[bench]]
name = "benchmarks"
harness = false