[package]
name = "tari_epoch_manager"
description = "The Tari epoch manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_crypto = { workspace = true }
minotari_app_grpc = { workspace = true, optional = true }
tari_ootle_common_types = { workspace = true }
tari_ootle_storage = { workspace = true }
tari_ootle_storage_sqlite = { workspace = true, optional = true }
tari_engine_types = { workspace = true }
tari_sidechain = { workspace = true }
tari_template_lib_types = { workspace = true }
tari_shutdown = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
serde = { workspace = true }
url = { workspace = true }

[features]
service = [
    "log",
    "tari_ootle_storage_sqlite",
    "minotari_app_grpc"
]
