[package]
name = "tari_ootle_address"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_crypto = { workspace = true }
# TODO: remove engine types dependency (move byte type traits to (yet another) types crate)
tari_engine_types = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_template_lib_types = { workspace = true }

bech32 = { workspace = true }
thiserror = { workspace = true }

ts-rs = { workspace = true, optional = true }
serde = { workspace = true, default-features = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
bincode = { workspace = true, features = ["serde"] }

[features]
ts = ["ts-rs"]
serde = ["dep:serde"]
